--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
-pandas 1.4.2
-country_converter 1.2
-numpy 1.21.5
-plotly 5.6.0
-python 3.9.12
+pandas
+country_converter
+numpy
+plotly
+python
